# qwatch

./: Cargo.toml  README.md  config.json
src/: main.rs
