[package]
name = "qwatch"
version = "0.1.0"
authors = ["MehmetCan ŞAHİN <sahinmcan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.7.1"
rusoto_core = "0.44.0"
rusoto_sqs = "0.44.0"
tokio = { version = "0.2.21", features = ["macros"] }
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"